--- a/BetterPlayerDataBase/BetterPlayerDataBase.vcxproj
+++ b/BetterPlayerDataBase/BetterPlayerDataBase.vcxproj
@@ -153,7 +153,13 @@
   <ItemGroup>
     <ClCompile Include="BetterPlayerDataBase.cpp" />
     <ClCompile Include="DataBase.cpp" />
+    <ClCompile Include="pch.cpp" />
     <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataBase.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
